--- a/estilos/estilos_catalogo.css
+++ b/estilos/estilos_catalogo.css
@@ -30,9 +30,9 @@
 .logo {
     height: 50px;
     transition: transform 0.2s;
-    transform-origin: center; /* Asegura que el origen de la transformación sea el centro */
+
 }
-.header .Icono:hover  {
+.logo:hover  {
     transform: scale(1.1);
 }
 
@@ -190,3 +190,6 @@ nav ul li form {
     color: #555;
 }
 
+.parrafo-sin-productos{
+    color: white;
+}
