--- a/estilos/estilos_catalogo.css
+++ b/estilos/estilos_catalogo.css
@@ -176,7 +176,7 @@ nav ul li form {
 
 .producto-imagen {
     max-width: 100%;
-    height: auto;
+    height: 300px;
     margin-bottom: 10px;
 }
 
