--- a/estilos/estilos_iniciarsesion.css
+++ b/estilos/estilos_iniciarsesion.css
@@ -8,6 +8,7 @@
     background-image: url(../imagenes/fondo2.jpg);
     background-attachment: fixed;
     background-size: cover;
+    /*background-color:#2a0928;*/
 }
 
 .body-principal a{
@@ -54,15 +55,17 @@
     width: 100%;
 }
 
-.form-reg {
-    background-color:#c1d9cd;
+
+.form-is h2{
+    text-align: center;
+    color: white;
+}
+.form-is {
+    background-color:#14213D;
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     width: 500px;
-}
-.form-reg h2{
-    text-align: center;
 }
 .form-container {
     background-color: #c1d9cd;
@@ -79,16 +82,20 @@
     margin-bottom: 15px;
 }
 .form-group label {
+    color: white;
     display: block;
     margin-bottom: 5px;
 }
 .form-group input {
+    border-color: #FCA311;
+    color: black;
     width: 100%;
     padding: 8px;
     box-sizing: border-box;
 }
 .form-group input[type="submit"] {
-    background-color: #f98f6f;
+    background-color: black;
+    border-color: #FCA311;
     color: white;
     border: none;
     cursor: pointer;
@@ -96,5 +103,6 @@
 .form-group input[type="submit"]:hover {
     background-color: #218838;
 }
-
-
+.registrado-palabra{
+    color: white;
+}
