--- a/estilos/estilo_catalogo.css
+++ b/estilos/estilo_catalogo.css
@@ -15,7 +15,7 @@
 }
 
 .header {
-    background-color: #000000;
+    background-color: #14213D;
     height: 70px;
     display: flex;
     justify-content: center;
@@ -37,7 +37,7 @@
 }
 
 .footer {
-    background-color: #000000;
+    background-color: #14213D;
     color: white;
     text-align: center;
     padding: 10px 0;
@@ -52,7 +52,7 @@ nav ul li {
 nav ul li a {
     font-size: 1.2rem;
     padding-right: 2rem;
-    color: #61d718;
+    color: white;
 }
 
 nav ul li form {
