--- a/estilos/estilo_cliente_sinlog.css
+++ b/estilos/estilo_cliente_sinlog.css
@@ -5,7 +5,6 @@
     --Platinum:#E5E5E5;
 }
 
-
 .body-principal {
     background: #000;
     min-height: 100vh;
@@ -39,6 +38,11 @@ header{
 }
 .Icono{
     flex:1;
+    transition: transform 1s;
+}
+
+header img:hover{
+    transform: scale(1.1);
 }
 .logo{
     height: 60px;
@@ -408,11 +412,11 @@ header .buscador{
 /*---------------FORMULARIO--------------------*/
 .Formulario-principal{
     font-family: "Righteous", sans-serif;
-    background-color: #f0f0f0;
     display: flex;
     justify-content: center;
     align-items: center;
     margin: 0;
+    background-image: url(../imagenes/fondo1.jpg);
 }
 .Formulario-principal .content-empresa {
     background-color: #ffffff;
@@ -421,20 +425,24 @@ header .buscador{
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
     max-width: 800px;
     width: 100%;
+    background-color: var(--oxford-blue);
 }
 .Formulario-principal .company-info {
     text-align: center;
     margin-bottom: 20px;
+    color: white;
 }
 
 .Formulario-principal .company-info h1 {
     color: #333;
     margin-bottom: 10px;
+    color: white;
 }
 
 .Formulario-principal .company-info p {
     color: #555;
     margin-bottom: 20px;
+    color:white;
 }
 
 .Formulario-principal .social-media {
@@ -463,6 +471,7 @@ header .buscador{
     max-width: 500px;
     width: 100%;
     margin: 0 auto;
+    background-color: var(--oxford-blue);
 }
 
 .form-aspecto form {
@@ -473,19 +482,21 @@ header .buscador{
 .form-aspecto h2 {
     text-align: center;
     margin-bottom: 20px;
-    color: #333;
+    color: white;
 }
 
 .form-aspecto label {
     margin-bottom: 10px;
     color: #555;
     font-weight: bold;
+    color: white;
 }
 
 .form-aspecto input[type="text"],
 .form-aspecto input[type="tel"],
 .form-aspecto input[type="email"],
 .form-aspecto textarea {
+    border-color: #FCA311;
     width: 100%;
     padding: 10px;
     margin-bottom: 20px;
@@ -495,6 +506,7 @@ header .buscador{
 }
 
 .form-aspecto textarea {
+    border-color: #FCA311;
     resize: none;
 }
 
@@ -541,7 +553,7 @@ header .buscador{
 }
 
 .footer {
-    background-color: #000000;
+    background-color: #14213D;
     color: white;
     text-align: center;
     padding: 10px 0;
@@ -553,4 +565,42 @@ header .buscador{
     text-decoration: none;
     color: white;
     font-size: 20px;
+}
+
+.preguntas-frecuentes {
+    padding: 50px 0;
+}
+
+.preguntas-frecuentes h2 {
+    text-align: center;
+    margin-bottom: 40px;
+}
+
+.faq-item {
+    margin-bottom: 20px;
+}
+
+.faq-question {
+    background-color: #333;
+    color: #fff;
+    padding: 10px;
+    cursor: pointer;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.faq-answer {
+    display: none;
+    padding: 10px;
+    border: 1px solid #ddd;
+    border-top: none;
+}
+
+.faq-answer.active {
+    display: block;
+}
+
+.faq-icon {
+    font-size: 1.2em;
 }
