--- a/estilos/estilos_iniciarsesion.css
+++ b/estilos/estilos_iniciarsesion.css
@@ -16,7 +16,7 @@
 }
 
 .header {
-    background-color:#000000;
+    background-color:#14213D;
     height: 70px;
     display: flex;
     justify-content: center;
@@ -47,7 +47,7 @@
 
 
 .footer {
-    background-color: #000000;
+    background-color: #14213D;
     color: white;
     text-align: center;
     padding: 10px 0;
