--- a/estilos/estilos_registro.css
+++ b/estilos/estilos_registro.css
@@ -15,7 +15,7 @@
 }
 
 .header {
-    background-color:#000000;
+    background-color:#14213D;
     height: 70px;
     display: flex;
     justify-content: center;
@@ -46,7 +46,7 @@
 
 
 .footer {
-    background-color: #000000;
+    background-color: #14213D;
     color: white;
     text-align: center;
     padding: 10px 0;
