--- a/estilos/estilo_clien_sinlog.css
+++ b/estilos/estilo_clien_sinlog.css
@@ -419,6 +419,7 @@ header .buscador{
     background-image: url(../imagenes/fondo1.jpg);
 }
 .Formulario-principal .content-empresa {
+    border: 1px solid #FCA311;
     background-color: #ffffff;
     padding: 20px;
     border-radius: 10px;
@@ -464,6 +465,7 @@ header .buscador{
     background-color: #333;
 }
 .form-container {
+    border: 1px solid #FCA311;
     background-color: #ffffff;
     padding: 20px;
     border-radius: 10px;
@@ -518,10 +520,12 @@ header .buscador{
     border-radius: 5px;
     cursor: pointer;
     font-size: 16px;
+    border-color: #FCA311;
 }
 
 .form-aspecto input[type="submit"]:hover {
     background-color: #45a049;
+
 }
 /*---------------FIN FORMULARIO--------------------*/
 /*Whatsapp*/
@@ -568,11 +572,18 @@ header .buscador{
 }
 
 .preguntas-frecuentes {
-    padding: 50px 0;
+    margin: 3% 7%;
+    padding: 2%;
+    background-color: #14213D;
+    border-radius: 50px;
 }
+
 
 .preguntas-frecuentes h2 {
     text-align: center;
+    font-size: 50px;
+    font-family: 'Orbitron', sans-serif;
+    color: #FCA311;
     margin-bottom: 40px;
 }
 
@@ -585,15 +596,17 @@ header .buscador{
     color: #fff;
     padding: 10px;
     cursor: pointer;
+    font-size: 24px;
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
 
 .faq-answer {
+    font-size: 20px;
     display: none;
     padding: 10px;
-    border: 1px solid #ddd;
+    border: 1px solid #FCA311;
     border-top: none;
 }
 
