--- a/estilos/estilo_cliente_sinlog.css
+++ b/estilos/estilo_cliente_sinlog.css
@@ -220,8 +220,8 @@ header .buscador{
 }
 
 .product-item img {
-    max-width: 100%;
-    height: auto;
+    width: 75%;
+    height: 60%;
 }
 
 .product-item h3 {
