--- a/estilos/estilo_clien_sinlog.css
+++ b/estilos/estilo_clien_sinlog.css
@@ -690,3 +690,31 @@ header .buscador{
     font-size: 14px;
     color: var(--Platinum);
 }
+
+.modal {
+    display:none ; /* Oculto por defecto */
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+.modal-content {
+    background-color: #14213D;
+    margin: 15% auto;
+    padding: 20px;
+    border: 1px solid #FCA311;
+    width: 80%;
+    max-width: 300px;
+    text-align: center;
+    z-index: 100;
+}
+
+button {
+    margin: 10px;
+    padding: 10px 20px;
+}
