--- a/estilos/estilo_cliente_sinlog.css
+++ b/estilos/estilo_cliente_sinlog.css
@@ -718,3 +718,33 @@ button {
     margin: 10px;
     padding: 10px 20px;
 }
+.confirmation-message {
+    display: none;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: #fff;
+    padding: 20px;
+    border: 1px solid #ccc;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    text-align: center;
+}
+
+.confirmation-message p {
+    margin-bottom: 20px;
+}
+
+#okButton {
+    padding: 10px 20px;
+    background-color: #4CAF50;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+#okButton:hover {
+    background-color: #45a049;
+}
