--- a/estilos/estilos_productos.css
+++ b/estilos/estilos_productos.css
@@ -210,3 +210,29 @@
     font-size: 16px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1) inset;
 }
+.add-button{
+    color: #ffffff;
+    position: fixed;
+    font-size: 40px;
+    bottom: 20px;
+    top: 90%;
+    right: 20px;
+    z-index: 100;
+    box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.3);
+    transition: transform 0.3s ease;
+    border-radius: 50%;
+    padding: 15px;
+    text-align: center;
+    text-decoration: none;
+    width: 60px;
+    height: 60px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #007bff;
+    border: none;
+    cursor: pointer;
+}
+.add-button:hover {
+    transform: scale(1.1);
+}
