--- a/estilos/estilos_catalogos.css
+++ b/estilos/estilos_catalogos.css
@@ -26,7 +26,10 @@ header{
     background-color: var(--oxford-blue);
     color: white;
 }
-
+header a {
+    text-decoration: none;
+    color: white;
+}
 .nav-arriba, .menu{
     display: flex;
     align-items: center;
