--- a/estilos/estilo_clien_sinlog_j.css
+++ b/estilos/estilo_clien_sinlog_j.css
@@ -123,6 +123,7 @@ header img:hover{
 header a {
     text-decoration: none;
     color: white;
+    font-family: 'Orbitron', sans-serif;
 }
 .logo{
     height: 60px;
@@ -137,11 +138,11 @@ header .buscador{
     border-radius: 5px;
     border: none;
 }
-.Iconos-sesion a span{
-    font-size: 2.5rem;
+.Iconos-sesion a{
+    font-size: 17px;
     color: white;
 }
-.Iconos-sesion a span:hover{
+.Iconos-sesion a:hover{
     color:wheat;
 }
 /*Segundo nivel de nagevacion*/
