--- a/estilos/estilos_productos.css
+++ b/estilos/estilos_productos.css
@@ -169,7 +169,7 @@
 }
 
 .product-table thead tr {
-    background-color: #4CAF50;
+    background-color: #009879;
     color: #ffffff;
     text-align: left;
     font-weight: bold;
@@ -193,13 +193,26 @@
 
 .product-table tbody tr:hover {
     background-color: #f1f1f1;
-    cursor: pointer;
 }
 
 
 .product-table img {
     max-width: 50px;
     max-height: 50px;
+}
+.edit-button {
+    background-color: #009879;
+    color: white;
+    border: none;
+    padding: 5px 10px;
+    text-decoration: none;
+    border-radius: 5px;
+    transition: background-color 0.3s;
+}
+
+.edit-button:hover {
+    background-color: #007f65;
+    cursor: pointer;
 }
 
 .edit-form input[type="file"] {
